edit file for docker can run correct

--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     volumes:
         - './server:/server'
+    expose:
+      - 5000
     ports:
       - 5000:5000
 
