--- a/web/client/Dockerfile
+++ b/web/client/Dockerfile
@@ -2,14 +2,14 @@
 FROM node:18.16.1-alpine
 
 # set working directory
-RUN mkdir /usr/src/app
+RUN mkdir -p /usr/src/app
 #copy all files from current directory to docker
 COPY . /usr/src/app
 
 WORKDIR /usr/src/app
 
 # install and cache app dependencies
-RUN yarn
+RUN npm install
 
 # add `/usr/src/app/node_modules/.bin` to $PATH
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
